test/test-files/analyzer/while-loops/error-while-condition-bool/exception.out
Semantic error in : ./test-files/analyzer/while-loops/error-while-condition-bool/source.spice:2:11:
Condition must be bool: While loop condition must be of type bool

while 5.6 {
      ^^^